@@ -1,0 +1,52 @@
+/* ============================================================
+ *
+ * This file is a part of digiKam project
+ * https://www.digikam.org
+ *
+ * Date        : 2024-09-23
+ * Description : a BQM plugin to assign captions metadata.
+ *
+ * SPDX-FileCopyrightText: 2021-2022 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ *
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ *
+ * ============================================================ */
+
+#ifndef DIGIKAM_ASSIGN_CAPTIONS_PLUGIN_H
+#define DIGIKAM_ASSIGN_CAPTIONS_PLUGIN_H
+
+// Local includes
+
+#include "dpluginbqm.h"
+
+#define DPLUGIN_IID "org.kde.digikam.plugin.bqm.AssignCaptions"
+
+using namespace Digikam;
+
+namespace DigikamBqmAssignCaptionsPlugin
+{
+
+class AssignCaptionsPlugin : public DPluginBqm
+{
+    Q_OBJECT
+    Q_PLUGIN_METADATA(IID DPLUGIN_IID)
+    Q_INTERFACES(Digikam::DPluginBqm)
+
+public:
+
+    explicit AssignCaptionsPlugin(QObject* const parent = nullptr);
+    ~AssignCaptionsPlugin()              override;
+
+    QString name()                 const override;
+    QString iid()                  const override;
+    QIcon   icon()                 const override;
+    QString details()              const override;
+    QString description()          const override;
+    QList<DPluginAuthor> authors() const override;
+
+    void setup(QObject* const)           override;
+};
+
+} // namespace DigikamBqmAssignCaptionsPlugin
+
+#endif // DIGIKAM_ASSIGN_CAPTIONS_PLUGIN_H
